# ChangeLog for sys-cluster/openmpi
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/openmpi/ChangeLog,v 1.131 2015/02/17 01:17:41 jsbronder Exp $

*openmpi-1.8.4-r2 (17 Feb 2015)

  17 Feb 2015; Justin Bronder <jsbronder@gentoo.org> +openmpi-1.8.4-r2.ebuild,
  metadata.xml:
  Add numa USE flag. As xarthisius points out, this is probably desireable as
  it allows locking processes to CPUs.

*openmpi-1.8.4-r1 (04 Feb 2015)
*openmpi-1.8.3-r1 (04 Feb 2015)
*openmpi-1.7.5-r1 (04 Feb 2015)
*openmpi-1.6.5-r1 (04 Feb 2015)

  04 Feb 2015; Justin Bronder <jsbronder@gentoo.org> +openmpi-1.6.5-r1.ebuild,
  +openmpi-1.7.5-r1.ebuild, +openmpi-1.8.3-r1.ebuild, +openmpi-1.8.4-r1.ebuild,
  +files/openmpi-ltdl.patch:
  Use system libltdl #273108

  04 Feb 2015; Justin Bronder <jsbronder@gentoo.org> -openmpi-1.8.ebuild,
  -openmpi-1.8.1.ebuild:
  cleanup

*openmpi-1.8.4 (04 Feb 2015)

  04 Feb 2015; Justin Bronder <jsbronder@gentoo.org> +openmpi-1.8.4.ebuild:
  Version bump #535800

  16 Oct 2014; Justin Bronder <jsbronder@gentoo.org> openmpi-1.8.ebuild,
  openmpi-1.8.1.ebuild, openmpi-1.8.3.ebuild:
  Properly disable fortran when requested, #525492. Thanks to Boris Bigott for
  providing a solution.

*openmpi-1.8.3 (15 Oct 2014)

  15 Oct 2014; Justin Bronder <jsbronder@gentoo.org> +openmpi-1.8.3.ebuild:
  sys-cluster/openmpi: bump

*openmpi-1.8.1 (03 Jun 2014)

  03 Jun 2014; Justin Bronder <jsbronder@gentoo.org> +openmpi-1.8.1.ebuild:
  Bump (#511018). Add dep on zlib and drop la files (#402095)

  17 Apr 2014; Justin Bronder <jsbronder@gentoo.org> openmpi-1.7.5.ebuild,
  openmpi-1.8.ebuild:
  Fix hwloc dep #507856. See
  http://svn.open-mpi.org/svn/ompi/branches/v1.8/NEWS

*openmpi-1.7.5 (08 Apr 2014)
*openmpi-1.8 (08 Apr 2014)

  08 Apr 2014; Alexey Shvetsov <alexxy@gentoo.org> +openmpi-1.7.5.ebuild,
  +openmpi-1.8.ebuild, -openmpi-1.6.3.ebuild, metadata.xml,
  openmpi-1.4.3.ebuild: