@@ -6,7 +6,7 @@ AUX openmpi-1.4.1-r22513.patch 2460 SHA256 083528f3ccdda8e1654accd5a6d3c79231d7d
 AUX openmpi-1.6-hostfile.patch 929 SHA256 4aca97b15207c633aaf70ee3aeadcb3b9034fa49780dafeacdb19cbdc765fe66 SHA512 2c229bbf938802570714224d479172da8f039eee82ac3906639d2cdd68aa0f0690a41f448d3dbb66ea2546f5a0e39043255dbe89c27ac4006f611dcaded0bf9f WHIRLPOOL c99ba9f3c69d7246d6c8aaebe0e4af85a30f02b906e5e8e2b75555a44180d68d89772d37df503c4b269cb9d31154d80087c8d31fa50f725e589a21b6b2fb438a
 AUX openmpi-ltdl.patch 2449 SHA256 e373af4671a3056776fe53a3a12d28641aa8e5a4b400d23f5840deaccc865992 SHA512 4487ecbd2025d561f5ac46c70da5e407f6f201b7588f350d1211790dceb64ec2acdf3ca8f90e2ecbe8a6f7c3a6577e77fb7ae22be0ff3dd4adbded9035a7b6c9 WHIRLPOOL 34712f50ec93e781e2f03d23527a719132b6257f862eb50d7fc20e8186f948fc8dc624e76a9517caab5f7c9d2d794c889def4aff8f0d9c333e3963de17c26e2f
 AUX openmpi-r24328.patch 1707 SHA256 3149f47463057e3263a242b2df88b588074f07395d437b585c5ce37f84aadf83 SHA512 e376f60f4c7bca610873ac5de5a9e72afab459262acf6f6ad61d4e8aa7a7d33370c52d2dcf2279a992de159b47d7d2fe29257306cf3e11a82234668205b876bf WHIRLPOOL 732347d68ba261f32c1010bcfeff2c490bc436d45a01119741fe68ee6ef366a2021e8d37dfb8ae2ffd681997111951eab4d57b00ff430e09d6c6f929e26816f9
-DIST openmpi-1.4.3.tar.bz2 6626909 SHA256 220b72b1c7ee35469ff74b4cfdbec457158ac6894635143a33e9178aa3981015
+DIST openmpi-1.4.3.tar.bz2 6626909 SHA256 220b72b1c7ee35469ff74b4cfdbec457158ac6894635143a33e9178aa3981015 SHA512 c33d5e019ba0b080aa34ecfa085182349da806e4bff26c1bf4dbdc8fb3f8f3c38899b9d96d671e1ae337b523ac9d634ae25c49d9af6eef2bc340c29dba75b1b8 WHIRLPOOL 92349d7bd16ff6e8563df602c215ce98ce5624b38a2975c13832d5b9504691c844206acad4c45376fe53e0116fe591782a3e5f8a132c4ac18ae793470d57db55
 DIST openmpi-1.4.5.tar.bz2 6643760 SHA256 a3857bc69b7d5258cf7fc1ed1581d9ac69110f5c17976b949cb7ec789aae462d SHA512 f89922345cde8978483e397e9016103626db3f1787f9afccaf0f60d59caa2a4409b47b01ac221d60e24e241f2afecb636ca89688bf326dc0ca5c817de96b3e99 WHIRLPOOL 2008bd952f9cc93ead6508267f5a45ee6d9ebf9136e35e25b798400d162173514da73349518bfada4777471c32d315e8556bbee8847a5268719d6b32fd0fd811
 DIST openmpi-1.6.5.tar.bz2 10943881 SHA256 fe37bab89b5ef234e0ac82dc798282c2ab08900bf564a1ec27239d3f1ad1fc85 SHA512 b0ede0264cd9263b8ba59ec51d17ad47b5f20d49d219ca05f7c396d608398d517b2023a46a2535fd6191160d709e4805c4de436dcfee56eda287383bd69f9652 WHIRLPOOL d0288677827c1deba17295ee1b69cd21da294ac314cc49404389b4c286384f9f2f229cae4c4fd62511e7f20abc510998642d6a2edfac3f16f83078f474f8e735
 DIST openmpi-1.7.5.tar.bz2 13286694 SHA256 cb3eef6880537d341d5d098511d390ec853716a6ec94007c03a0d1491b2ac8f2 SHA512 72de2788fa26615a2e7373b5f32e0a2b9e39d56094c45b49348ef19bbb0ea306734b7d3275d76471a18628b5244d882de4ed3595eb46f13683e1c8d2b277f065 WHIRLPOOL 107edd2eeca6e0ce9a9fb9ea1cd920cb1a87e8434390f2ed93279734c61bed63e9942bf2d33081e992d4d892f77a8643abbb58194aa76f7148d8716f1648aa82
@@ -22,13 +22,18 @@ EBUILD openmpi-1.8.3-r1.ebuild 5157 SHA256 1d09a5c89644a96c9881802cceb8cdcb44190
 EBUILD openmpi-1.8.3.ebuild 4979 SHA256 5b616cb2a56206b96f670d1b2b64b70f25f2bc378c4907bb62327e3944ab13b1 SHA512 6936ecbdaf0fd935f378e1031edff175ec74a71c860a84f85327ee66d6b733de647232db24b9d7355dfda53c50665f3a833a4a424df6301ae49687ce72ed8e7b WHIRLPOOL 3b44fc882eb26d79163e1eaef07ab9fd1fa8a06206a9e6625a4f4bac6c28c9aec795e22f7e34f5c72b48a9c4d800389f41d4997d9fe13f3b97e35106c2119fb1
 EBUILD openmpi-1.8.4-r1.ebuild 5157 SHA256 22160e7f2b82fca297dfc564739bf7d70e37c47973868bdcbef86a0c309b85a2 SHA512 5a26bf7afb33aaa1be1920723f94ab89291bd507857dc9fa6a2bf8b9305621af4f63e40b19019a097315bd4fdf8505ae473dcea7940a19b18c77ab22ced4c39e WHIRLPOOL 1179eabc0445a5b7b1135d2c47a71c061bcc143f2a4dec16606ba3e4266a65730877dbae14b56f22702eb8f6bba0cb6cdcd674d3845494d607385a2a56b9ee77
 EBUILD openmpi-1.8.4-r2.ebuild 5149 SHA256 9707078b5e1b97af59fe4c2729e1dfa648b93571733a8a21d45a94a105c39163 SHA512 097c8eca8da7e5c83d35d2ca9bb375875dd94b8df30c6569e6dcfcbea1f952ce6c630fa9e04c27051e81a42721a9565f948007233a84d9a22e0744d3a81cce5c WHIRLPOOL 5a5f5e74e5b1cb5a6d97ae1a4182a1115ad9448635c9dc50af6d3b6818afdf9aa66e958ebff77d42a3df40e74b3a211fad88ed558ee2664fd27e15d2d38e945f
+EBUILD openmpi-1.8.4-r3.ebuild 6144 SHA256 d7b0ebd0d0fa17f2ed0be1b28ff01fac4be4e9acdbb9ab72dd6d22d087008b48 SHA512 5ff4b8f1b3e63cfd56062da07c1c4467aa1088662e090cbea629a6936f63029ef65c5de95c72540817a1cf5c4bb01cc6b71cf2a6fc5e2792b5d98ffa9c65e72e WHIRLPOOL c66b9e49ce54d3601180c9a47fd35bb5d2243cfb0fbcbbbd16b6489d21d8141272ed5e349852800c03b8d437575d0ff4242464d03d251a1e5ec19be944f29ab9
 EBUILD openmpi-1.8.4.ebuild 4979 SHA256 b9e45c3090560081a913f42420919df29647b00215571b364296a97667c502cb SHA512 409f2a6419fc2000c8575d17893a4bc6b18c1b1c7c8984e222c3c1c602ac8c06a712b4f54892d468307cf7aa801696f66d4b558c9a1ab490b1726045792eb676 WHIRLPOOL c935ce298c4f5c84bc5391dbdf8811c579ed3db198f9bdb400ef5ec3c2c6339dfac463b86b92b1824e962296b6fc18090a7123be48f00de0ba30a2439ad410a7
-MISC ChangeLog 20710 SHA256 8b67298f113869246822e94577cc658ca8d5d15710799bd6c8cc9eac60852d44 SHA512 02c459d5dd20cd753e7025653c98484687f5c6d2c0d2b406e18bee53e6f458991e32e6b14963b21eac1699b524c6b9cb5c4a12ebad4924d9cb1db8b15efefb4f WHIRLPOOL f0d171e0e9093416c386e9c9ad38efd54ff45080d6926e40b35451ae8766758054d70eb8c42c1b71697717fc247b99d799b21aeb01801c88a7eb481d9b282ed3
+MISC ChangeLog 20846 SHA256 bca2dbe881acb27b70e020ea58bbc21fc4be7e1cca8e15e826f5883178110d18 SHA512 72b0fad9fda5635494575c855f6dd9897fa7f7477c93ebf5df3ece1b25eea576b491b0af7bfb1bcd9bbad9e8fbb78ba2c0bd5cfb64f8d493cae3cc0a6b888a1e WHIRLPOOL c0c6a6ec3dbc220790c5cb8b620199fe3bb72d9a17858f6a12e23540390faaa98d2f584febff289a8749452945787f96f5ae19dccec35645f19fa105cc93b891
 MISC metadata.xml 791 SHA256 9edc79c0dc5999563fa3840cbba64de2b7061b7aa15fb62b7525944578f0b270 SHA512 0ec140f99b9ece69950b5d9cd283a097b3e4d6962b4c7941343b0eea1a914edf53b9ddfeb8bc2a8cc920219cf8e674b07370a0446136b1f9b416614acbcb97f6 WHIRLPOOL 761b3e76edadd1b7066937c3c9b93ae09c3c224dbf4b1da3771a218d54b92354e86adfa8dc945da049206f1e9b885653a12fd19342a7966ed3458a89df7f54ba
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlTilrsACgkQ4MrvBE1wQ8k6fACfZKTVZY5hEJxun+pNvHn1xiVG
-mtwAniefYciEBqhrnys/8l6z1LYYSL/D
-=qDoK
+iQEcBAEBCAAGBQJVT9ywAAoJEOeBhlrCAAWGbpUIAKIEdZrT4WqL+bGyGP9YbtvD
+TsiZ1pCGcYu+8teWzLdju/6d3Z1OAASwzrhh10IeYyBmV5rcjCf5vO99VpJ5CJui
+guoPtAnOD7ed8T7C6hfXSx3Uv6ijcG9Bk6pPrfluYWX1VtGRNdPsI0HskIchhfET
+6LlHB6Oat5vy+LXclN5NZl713Esva/A/8JpohBB1siH1TyjI2I0E7pDxkRkesZmC
+rWznGZMsrqViRYFH9qYFkgMvEpSsuv36cQO92Yk8QNXHNoRmP1J19mTy3GzNZ34R
+VKrn+nHxYSQfodl0qTD17nVJ5a0DZO/pQPmXTkPwOsvc2lzh905dqPQd4qivkqs=
+=D+hu
 -----END PGP SIGNATURE-----
