@@ -1,6 +1,11 @@
 # ChangeLog for sys-cluster/openmpi
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/openmpi/ChangeLog,v 1.131 2015/02/17 01:17:41 jsbronder Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/openmpi/ChangeLog,v 1.132 2015/05/10 22:33:19 ottxor Exp $
+
+*openmpi-1.8.4-r3 (10 May 2015)
+
+  10 May 2015; Christoph Junghans <ottxor@gentoo.org> +openmpi-1.8.4-r3.ebuild:
+  added multilib support
 
 *openmpi-1.8.4-r2 (17 Feb 2015)
 
